# robong

./: .gitignore  1  Makefile  README.md  gitcom  keyCode.py  rcCarInfo.txt  rccar_dev.txt  readme.txt  robong  run  test  test.c  test4  test4.c  token.txt
rccar/: .gitignore  cameraDet.py  face_det.ipynb  voiceRCCar .py
rccar/.ipynb_checkpoints/: face_det-checkpoint.ipynb  voiceRCCar -checkpoint.py
rccar/openCV/cpp/: CMakeLists.txt  cardRestore.cpp  hello.cpp  helloDraw.cpp  houghLine.cpp  imageFilter.cpp  main  makefile  transAffine.cpp
rccar/openCV/python/: test.py
ros2/arduino_project/led/: led.ino
ros2/arduino_project/servo/: servo.ino
ros2/arduino_project/switch/: switch.ino
ros2/turtlebot3_ws/install/: local_setup.sh  setup.sh
ros2/turtlebot3_ws/install/cmake_modules/share/cmake_modules/: local_setup.sh  package.sh
ros2/turtlebot3_ws/log/: latest_build
ros2/workspace/: .gitignore  caa  cal_chk  cal_launch  cal_oper  cal_pub  cal_srv  cb  cba  cbp  cc  cl  class_room.pgm  class_room.yaml  clp  clp2  cm  cs  gym.ipynb  map_name.pgm  map_name.yaml  param_test.yaml  run_deadline  run_lifespan  run_liveliness  ss  ss2  tur_bringup  tur_gaz_empty
ros2/workspace/.ipynb_checkpoints/: gym-checkpoint.ipynb
ros2/workspace/src/Homework1018/: package.xml  setup.cfg  setup.py
ros2/workspace/src/Homework1018/Homework1018/: hw_mtpub.py  hw_pub.py  hw_sub.py  hw_sub2.py  hw_sub3.py  hw_sub_util.py
ros2/workspace/src/SimplePkg/: package.xml  setup.cfg  setup.py
ros2/workspace/src/SimplePkg/SimplePkg/: hello.py  hello_pub.py  hello_sub.py  move_turtle.py  second.py
ros2/workspace/src/calculator/: package.xml  setup.py
ros2/workspace/src/calculator/calculator/: argument_pub.py  cal_checker.py  calculator.py  operator_client.py
ros2/workspace/src/calculator/launch/: cal.launch.py
ros2/workspace/src/calculator/param/: calculator.yaml
ros2/workspace/src/move_turtle/: package.xml  setup.py
ros2/workspace/src/move_turtle/launch/: aruco_launch.launch.py  robot_camera.launch.py  xacro_display.launch.py
ros2/workspace/src/move_turtle/move_turtle/: arduino_led.py  arduino_servo.py  arduino_switch.py  follow_ar_marker.py  follow_wall.py  follow_wall_tf.py  follow_waypoints.py  follow_waypoints_loop.py  led_server.py  move_circle.py  move_rect.py  patrol_manipulator.py  servo_server.py  servo_sub.py
ros2/workspace/src/move_turtle/param/: burger.yaml
ros2/workspace/src/move_turtle/urdf/: flexible.urdf  macroed.urdf.xacro  materials.urdf  model.sdf  model.xacro  multipleshapes.urdf  origins.urdf  physics.urdf  test.urdf  turtlebot3_burger.urdf  urdf.rviz  visual.urdf
ros2/workspace/src/move_turtle_cpp/: CMakeLists.txt  package.xml
ros2/workspace/src/move_turtle_cpp/src/: canny.cpp  hello_moveit.cpp  servoTest.cpp  servo_sub.cpp
ros2/workspace/src/my_rqt_plugin/: CMakeLists.txt  package.xml  plugin.xml
ros2/workspace/src/my_rqt_plugin/launch/: turtlesim.launch.py
ros2/workspace/src/my_rqt_plugin/resource/: rqt_example.ui
ros2/workspace/src/my_rqt_plugin/scripts/: rqt_example
ros2/workspace/src/ros2env/: package.xml  setup.cfg  setup.py
ros2/workspace/src/simple_ros/: package.xml  setup.cfg  setup.py
ros2/workspace/src/simple_ros/launch/: hello.launch.py  moveturtle.launch.py  moveturtle_time.launch.py  param.launch.py  two_turtle.launch.py
ros2/workspace/src/simple_ros/param/: simple_param.yaml  turtle_param1.yaml  turtle_param2.yaml  turtle_param3.yaml
ros2/workspace/src/simple_ros/simple_ros/: action_client.py  action_server.py  deadline.py  hello.py  hello_class.py  hello_pub.py  hello_sub.py  int_service_server.py  lifespan.py  liveliness.py  logging_exam.py  move_turtle.py  move_turtle_ns.py  move_turtle_time.py  move_turtle_time_ns.py  service_client.py  service_server.py  simple_param.py  simple_param2.py  time_pub.py  user_inter_pub.py
ros2/workspace/src/simple_ros_cpp/: CMakeLists.txt  package.xml
ros2/workspace/src/simple_ros_cpp/include/composition/: listener_component.hpp  talker_component.hpp  visibility_control.h
ros2/workspace/src/simple_ros_cpp/include/image_pipeline/: camera_node.hpp  common.hpp  image_view_node.hpp  watermark_node.hpp
ros2/workspace/src/simple_ros_cpp/include/simple_ros_cpp/: hello_pub_class.hpp  hello_sub.hpp  hello_sub_cv.hpp
ros2/workspace/src/simple_ros_cpp/launch/: composition_demo.launch.py  hello.launch.py  hello_cv.launch.py  lifecycle_demo.launch.py  move_turtle.launch.py  tf_turtle.launch.py  tf_turtle_dy.launch.py
ros2/workspace/src/simple_ros_cpp/src/: action_client.cpp  action_server.cpp  dynamic_tf.cpp  dynamic_tf2.cpp  follow_turtle_tf.cpp  hello_pub.cpp  hello_pub_class.cpp  hello_pub_class_method.cpp  hello_sub.cpp  hello_sub_cv.cpp  hello_sub_cv_method.cpp  hello_sub_method.cpp  hello_sub_opencv.cpp  image_pipeline_all.cpp  lifecycle_listener.cpp  lifecycle_service_client.cpp  lifecycle_service_client_thread.cpp  lifecycle_talker.cpp  listener_component.cpp  logging_exam.cpp  manual_composition.cpp  move_turtle.cpp  publish_map.cpp  publish_map_with_lidar.cpp  service_client.cpp  service_client_int.cpp  service_server.cpp  simple_param.cpp  static_tf.cpp  talker_component.cpp  two_node_cyclic_pipe.cpp  two_node_pipe.cpp
ros2/workspace/src/tb_interface/: CMakeLists.txt  package.xml
ros2/workspace/src/tb_interface/srv/: ServoAngle.srv
ros2/workspace/src/user_interface/: CMakeLists.txt  package.xml
ros2/workspace/src/user_interface/action/: CalChecker.action  Fibonacci.action
ros2/workspace/src/user_interface/msg/: CalArguments.msg  UserInts.msg
ros2/workspace/src/user_interface/srv/: CalOperate.srv
uno/dbWifi/: app.js  package.json  test.txt
uno/dbWifi/public/: edit.html  insert.html  list.html
uno/dbWifi/uno/insert_esp8266/: insert_esp8266.ino
uno/exam01/: exam01.ino
uno/ledUno/: app.js  appMon.js  package-lock.json  package.json  포트폴리오(양식).hwp  프로젝트기술서_송훈구_202409.hwp
uno/ledUno/public/: index.html
uno/ledUno/uno/ledUno/: ledUno.ino
uno/ledUno/uno/servoSweep/: servoSweep.ino
uno/testUno/: package-lock.json  package.json
(+42 files in other folders)
